# OmniDrop

./: .gitignore  README.md  development_plan.md  index.html  omnidrop_blue_final.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/core/: downloader.rs  mod.rs  parser.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_add_fetching_metadata_status.sql  002_fix_status_check.sql
src/components/: HistoryTab.tsx  PlaylistModal.tsx  PlaylistsTab.tsx  SettingsTab.tsx  Sidebar.tsx  ToastContainer.tsx  Topbar.tsx
src/components/download/: AudioFormatSelector.tsx  DownloadInput.tsx  OptionsDrawer.tsx  QualitySelector.tsx  SizeEstimator.tsx  UrlBar.tsx
src/components/queue/: QueueGrid.tsx  QueueHeader.tsx  QueueList.tsx
src/hooks/: useDownloadEngine.ts  useMediaDetails.ts  usePlaylistModal.ts  useToast.ts  useWindowControls.ts
src/i18n/: LangContext.tsx  translations.ts
src/types/: index.ts
src/utils/: format.ts  opener.ts
