[package]
name = "omnidrop"
version = "0.1.0"
description = "A blazing fast, self-contained media downloader"
authors = ["OmniDrop Team"]
edition = "2021"

[lib]
name = "omnidrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri V2 Core & Plugins ---
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2" # ضروري جداً لتشغيل yt-dlp و ffmpeg كـ Sidecars

# --- Async Runtime (محرك المهام المتعددة) ---
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] } # من أجل CancellationToken

# --- Serialization (تبادل البيانات مع الواجهة) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Error Handling (معالجة الأخطاء الصارمة) ---
thiserror = "1"

# --- Database (قاعدة بيانات SQLite المدمجة) ---
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "migrate",
    "chrono"
] }

# --- Concurrency & Identifiers (إدارة الذاكرة والمعرفات) ---
dashmap = "6" # HashMap آمن للـ Multi-threading
uuid = { version = "1", features = ["v4"] }

# --- Utilities (أدوات مساعدة) ---
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dirs = "6.0.0"
url = "2"

# ==========================================
# إعدادات الإنتاج (لجعل التطبيق خفيفاً وسريعاً)
# ==========================================
[profile.release]
lto = true            # Link Time Optimization (تحسين الروابط)
strip = true          # حذف رموز التصحيح لتقليل الحجم
opt-level = "z"       # تصغير الحجم للحد الأقصى
codegen-units = 1     # بناء أبطأ ولكن أداء أفضل
panic = "abort"       # الإغلاق المباشر عند الانهيار بدلاً من تتبع الأخطاء
